[metadata]
name = aiclib
author = Ozone
author-email = justin.hammond@rackspace.com
summary = An NVP client
description-file = README.rst
license = Apache-2
home-page = http://github.com/rackerlabs/aiclib
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    aiclib

[hooks]
setup-hooks =
    pbr.hooks.setup_hook
